sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:18: error: not found: value i
      i=x-2
      ^AlgCocktailSort1:20: error: not found: value i
      while (i>0){
             ^AlgCocktailSort1:22: error: not found: value i
        if(isSmaller(i+1,i)){swap(i,i+1);continue=true;}
                     ^AlgCocktailSort1:22: error: not found: value i
        if(isSmaller(i+1,i)){swap(i,i+1);continue=true;}
                         ^AlgCocktailSort1:22: error: not found: value i
        if(isSmaller(i+1,i)){swap(i,i+1);continue=true;}
                                  ^AlgCocktailSort1:22: error: not found: value i
        if(isSmaller(i+1,i)){swap(i,i+1);continue=true;}
                                    ^AlgCocktailSort1:23: error: not found: value i
        i=i-1
        ^